@@ -279,8 +279,8 @@ def dependencies(target):
         ffmpeg_options = {}
 
     return (('ffmpeg-cdist', 'd0986a9', ffmpeg_options),
-            ('libdcp', '89d891b'),
-            ('libsub', 'e4fde97'))
+            ('libdcp', '332c7c3'),
+            ('libsub', '8182aed'))
 
 def configure_options(target):
     opt = ''
