@@ -1,3 +1,7 @@
+2015-11-15  Carl Hetherington  <cth@carlh.net>
+
+	* Basic support for trusted device lists in KDMs (#750).
+
 2015-11-14  Carl Hetherington  <cth@carlh.net>
 
 	* Updated nl_NL translation from Rob van Nieuwkerk.
